# Audio-Manager

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  main.py  pyproject.toml  requirements.txt  test.py
core/: app.py  config.py  events.py  helpers.py  icon_tray.py
