[project]
name = "audio-manager"
version = "1.0.0"
description = "An audio manager for windows to manage and control audio levels for different applications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "comtypes==1.4.10",
    "psutil>=7.0.0",
    "pycaw==20240210",
    "pyside6>=6.8.2.1",
    "pystray>=0.19.5",
    "typing-extensions>=4.12.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.28.1",
    "nuitka>=2.6.8",
]

[tool.ruff]
line-length = 79
lint.extend-select = ["ANN"]
lint.ignore = ["ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 72

[tool.basedpyright]
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "test*.py"]
reportImportCycles = false
reportUnnecessaryIsInstance = false
reportImplicitStringConcatenation = false
reportUnusedCallResult = false
reportMissingTypeStubs = false
reportAssignmentType = false
reportRedeclaration = false
reportAny = false
reportExplicitAny = false
